--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mocha": "^5.2.0",
