--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/worknenjoy/ahorta#readme",
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "assert": "^1.4.1",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
