--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./server.js",
     "test": "NODE_ENV=test ./node_modules/.bin/mocha --timeout 30000 test/*.test.js",
     "migrate": "node_modules/.bin/sequelize db:migrate",
-    "migrate-test": "NODE_ENV=test node_modules/.bin/sequelize db:migrate"
+    "migrate-test": "NODE_ENV=test node_modules/.bin/sequelize db:migrate",
+    "heroku-postbuild": "npm run migrate"
   },
   "repository": {
     "type": "git",
