--- a/package.json
+++ b/package.json
@@ -35,13 +35,20 @@
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
     "assert": "^1.4.1",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.2",
+    "jsonwebtoken": "^8.5.1",
     "mocha": "^5.2.0",
     "nock": "^10.0.2",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pg": "^7.7.1",
     "sendgrid-web": "^0.0.5",
     "sequelize": "^4.42.0",
